# vidllm

examples/: README.md
examples/agents/: README.md
examples/agents/mixture_of_agents/: README.md
examples/agents/react/: README.md
examples/agents/rewoo/: README.md
examples/agents/rewoo/configs/: config.yml
examples/agents/tool_calling/: README.md
examples/demo/: mv2a.py  test.m4a  whisper-demo.py
examples/simple/: Dockerfile  README.md  pyproject.toml
examples/simple/src/aiq_simple.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
examples/simple/src/aiq_simple/configs/: config.yml  eval_config.yml  eval_only_config.yml  eval_upload_config.yml
examples/simple/tests/: test_web_query_tool.py
examples/simple_rag/: README.md
examples/teaching_video2struct/: Dockerfile
examples/teaching_video2struct/deploy_external_mcp/: Dockerfile  README.md
examples/teaching_video2struct/src/teaching_video2struct/configs/: config.yml
teaching_video2struct/: README.md
teaching_video2struct/teaching_video2struct/: README.md  pyproject.toml
teaching_video2struct/teaching_video2struct/src/teaching_video2struct/: register.py
ui/: UI(1).html  UI-wei.html  UI.html  package-lock.json  package.json  server.js
